--- a/app/src/main/res/drawable/ic_notification.xml
+++ b/app/src/main/res/drawable/ic_notification.xml
@@ -1,10 +1,23 @@
+<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="24"
-    android:viewportHeight="24"
-    android:tint="#FFFFFF">
-  <path
-      android:fillColor="@android:color/white"
-      android:pathData="M18,17L6,17v-2h12v2zM18,13L6,13v-2h12v2zM18,9L6,9L6,7h12v2zM3,22l1.5,-1.5L6,22l1.5,-1.5L9,22l1.5,-1.5L12,22l1.5,-1.5L15,22l1.5,-1.5L18,22l1.5,-1.5L21,22L21,2l-1.5,1.5L18,2l-1.5,1.5L15,2l-1.5,1.5L12,2l-1.5,1.5L9,2 7.5,3.5 6,2 4.5,3.5 3,2v20z"/>
-</vector> 
+    android:viewportHeight="24">
+    
+    <!-- 圆形背景 -->
+    <path
+        android:fillColor="#3DDC84"
+        android:pathData="M12,12m-10,0a10,10 0 1,1 20,0a10,10 0 1,1 -20,0" />
+    
+    <!-- 眼睛图标 -->
+    <path
+        android:fillColor="#FFFFFF"
+        android:pathData="M9,12c0,-1.7 1.3,-3 3,-3s3,1.3 3,3s-1.3,3 -3,3s-3,-1.3 -3,-3z" />
+    
+    <!-- 瞳孔 -->
+    <path
+        android:fillColor="#3DDC84"
+        android:pathData="M10.5,12c0,-0.8 0.7,-1.5 1.5,-1.5s1.5,0.7 1.5,1.5s-0.7,1.5 -1.5,1.5s-1.5,-0.7 -1.5,-1.5z" />
+    
+</vector>
