--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,16 @@
 <resources>
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
+    
+    <!-- 主题所需颜色 -->
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    
+    <!-- 专注模式相关颜色 -->
+    <color name="focus_background">#8000FF00</color>
+    <color name="focus_text">#FFFFFFFF</color>
+    <color name="focus_button">#FF4CAF50</color>
 </resources>
