--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,8 +3,19 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	tools:context="person.notfresh.selfcontrol.MainActivity">
 	<item
+		android:id="@+id/action_theme_color"
+		android:icon="@android:drawable/ic_menu_preferences"
+		android:title="设置主题颜色"
+		app:showAsAction="never" />
+	<item
 		android:id="@+id/action_settings"
+		android:icon="@android:drawable/ic_menu_manage"
 		android:orderInCategory="100"
 		android:title="@string/action_settings"
+		app:showAsAction="ifRoom" />
+	<item
+		android:id="@+id/action_manual"
+		android:orderInCategory="101"
+		android:title="使用说明书"
 		app:showAsAction="never" />
 </menu>
